<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".placeSearch.ui.DropLocationActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.libraries.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginTop="@dimen/dp40"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_back"
        app:backgroundTint="@color/white"
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/map" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCurrentLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="@dimen/dp24"
        android:text="@string/select_drop_off_location"
        android:textColor="@color/quantum_black_100"
        android:textSize="@dimen/sp20"
        app:layout_constraintBottom_toBottomOf="@id/fabBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fabBack"
        app:layout_constraintTop_toTopOf="@id/fabBack" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPickUpLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp12"
        android:layout_marginTop="@dimen/dp14"
        android:clipChildren="true"
        app:cardCornerRadius="@dimen/dp8"
        app:cardElevation="@dimen/dp8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fabBack">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rvPickUpLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dp10">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPickUpPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dp16"
                android:paddingVertical="@dimen/dp6"
                app:layout_constraintBottom_toBottomOf="@id/tvPickUpAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_pickup_circle" />

            <View
                android:id="@+id/viewPickUpDrop"
                android:layout_width="@dimen/dp2"
                android:layout_height="0dp"
                android:background="@color/green"
                app:layout_constraintBottom_toTopOf="@id/ivDropPin"
                app:layout_constraintEnd_toEndOf="@id/ivPickUpPin"
                app:layout_constraintStart_toStartOf="@id/ivPickUpPin"
                app:layout_constraintTop_toBottomOf="@id/ivPickUpPin" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivDropPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dp16"
                android:paddingVertical="@dimen/dp6"
                app:layout_constraintBottom_toBottomOf="@id/tvDropAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvDropLabel"
                app:srcCompat="@drawable/ic_pick_up_filled"
                app:tint="@color/green" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPickUpLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:maxLines="1"
                android:paddingEnd="@dimen/dp24"
                android:textColor="@color/black"
                android:textColorHint="@color/quantum_grey300"
                android:textSize="@dimen/sp20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPickUpPin"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Home" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPickUpAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:maxLines="1"
                android:paddingEnd="@dimen/dp24"
                android:textColor="@color/quantum_grey400"
                android:textSize="@dimen/sp14"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPickUpPin"
                app:layout_constraintTop_toBottomOf="@id/tvPickUpLabel"
                tools:text="Umi Sushi - Jumeirah Beach Road - Dubai Main road" />

            <View
                android:id="@+id/viewSeparator"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp1"
                android:layout_marginTop="@dimen/dp8"
                android:background="@color/quantum_grey100"
                app:layout_constraintEnd_toEndOf="@id/tvPickUpLabel"
                app:layout_constraintStart_toStartOf="@id/tvPickUpLabel"
                app:layout_constraintTop_toBottomOf="@id/tvPickUpAddress" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDropLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:clickable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:hint="@string/select_drop_off_location"
                android:maxLines="1"
                android:paddingEnd="@dimen/dp24"
                android:paddingBottom="@dimen/dp4"
                android:textColor="@color/black"
                android:textColorHint="@color/quantum_grey300"
                android:textSize="@dimen/sp20"
                app:layout_constraintBottom_toTopOf="@id/tvDropAddress"
                app:layout_constraintEnd_toStartOf="@id/ivDropSearch"
                app:layout_constraintStart_toEndOf="@id/ivPickUpPin"
                app:layout_constraintTop_toBottomOf="@id/viewSeparator"
                app:layout_constraintVertical_bias="1"
                tools:text="" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDropAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:maxLines="1"
                android:paddingEnd="@dimen/dp24"
                android:textColor="@color/quantum_grey300"
                android:textSize="@dimen/sp14"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivDropSearch"
                app:layout_constraintStart_toEndOf="@id/ivPickUpPin"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Umi Sushi - Jumeirah Beach Road - Dubai Main road"
                tools:visibility="gone" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivDropSearch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/dp8"
                android:padding="@dimen/dp8"
                app:layout_constraintBottom_toBottomOf="@id/tvDropAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvDropLabel"
                app:srcCompat="@drawable/ic_search"
                app:tint="@color/quantum_grey300" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp20"
        android:contentDescription="@null"
        android:src="@drawable/ic_my_location"
        app:backgroundTint="@color/white"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/btnConfirmLocation"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmLocation"
        style="@style/PickUpButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp60"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginVertical="@dimen/dp24"
        android:enabled="false"
        android:paddingVertical="@dimen/dp10"
        android:text="@string/add_drop_off"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp18"
        app:cornerRadius="@dimen/dp24"
        app:elevation="@dimen/dp8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSkip"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp60"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginVertical="@dimen/dp24"
        android:backgroundTint="@color/white"
        android:enabled="true"
        android:paddingVertical="@dimen/dp10"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="@dimen/sp18"
        app:cornerRadius="@dimen/dp24"
        app:elevation="@dimen/dp8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDropLocationPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pick_up_filled"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressAddress"
        android:layout_width="@dimen/dp60"
        android:layout_height="@dimen/dp60"
        android:visibility="gone"
        app:indicatorColor="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>